try to fix banner alignment again

--- a/docs/css/banners.css
+++ b/docs/css/banners.css
@@ -9,6 +9,7 @@
   display: flex; 
   justify-content: flex-start;
   align-items: flex-start; /* Aligns emoji with the first line of text */
+  text-align: left;
 }
 .banner .emoji {
   font-size: 1.5rem; 
@@ -18,6 +19,7 @@
 .banner .text {
   font-size: 1rem;
   font-weight: bold;
+  text-align: left;
 }
 
 /* General Collapsible Banner Settings */
